# Koodinmurtaja

./: .gitignore  README.md
client/: README.md  kisumirri.txt  package-lock.json  package.json
client/src/: app.css
client/src/lib/: api.ts  index.ts  messages.ts  stores.svelte.ts  types.ts  websocket.ts
client/src/routes/: +page.svelte
client/src/routes/join/: +page.svelte
playground/websocket/: index.html  index.js  package-lock.json  package.json
server/: CMakeLists.txt  README.md
server/src/: main.cpp  main.h  room.cpp  room.h
server/static/: websockettest.html
